Added discussion template

--- a/task2.tex
+++ b/task2.tex
@@ -101,11 +101,45 @@ Finally, we have the \textbf{instrument} table which store information about all
 
 \section{Discussion}
 
-\subsection{Question 1}
+\subsection{Are naming conventions followed? Are all names sufficiently explaining?}
+All naming conventions are followed strictly. This means that all table names and column names follow snake case. This was the recommended naming conventions presented in the lectures.
 
-\subsection{Question 2}
+\subsection{Is the crow foot notation correctly followed?}
 
-\subsection{Question 3 ...}
+\subsection{Is the model in 3NF? If not, is there a good reason why not?}
+
+\subsection{Are all tables relevant? Is some table missing?}
+
+
+\subsection{Are there columns for all data that shall be stored? Are all relevant column con-
+straints and foreign key constraints specified? Can all column types be motivated?}
+
+
+\subsection{Can the choice of primary keys be motivated? Are primary keys unique?}
+
+
+\subsection{Are all relations relevant? Is some relation missing? Is the cardinality correct?}
+
+
+\subsection{Is it possible to perform all tasks listed in the project description?}
+
+
+\subsection{Are all business rules and constraints that are not visible in the diagram explained in plain text?}
+
+
+\subsection{Are there attributes which are calculated from other attributes and then written back to the database (derived attributes)? If so, why? Records of student fees and instructor payments might be examples of such attributes.}
+
+
+\subsection{Are tables (or ENUMs) always used instead of free text for constants such as the
+skill levels (beginner, intermediate and advanced)?}
+
+
+\subsection{Is the method and result explained in the report? Is there a discussion? Is the
+discussion relevant?}
+
+
+\subsection{Pros/cons of storing all data in the database compared to application}
+\subsection{Pros/cons of storing multiple versions of data in the database}
 
 \section{Comments About the Course}
 
