--- a/task2.tex
+++ b/task2.tex
@@ -41,6 +41,7 @@ It is furthermore declared that the solution below is a contribution by the proj
 
 \section{Introduction}
 
+During this assignment, the goal was to transform the conceptual model which was implemented during the previous assignment to a logical and physical model. While the conceptual model focuses on modeling reality by capturing the entities, relationships, and attributes of the Soundgood Music School’s operations, the logical and physical model bridges the gap between abstraction and implementation. This refined model is designed to represent the structure and organization of the database, making it easy to translate the diagram to SQL.
 
 \section{Literature Study}
 
