--- a/task2.tex
+++ b/task2.tex
@@ -81,29 +81,29 @@ To create a Logical and Physical Model that accurately represents the requiremen
 
 The GitHub repository with Astah files, SQL files, etc., can be found at \url{https://github.com/Cadde0/IV1351-Project}.
 
-The result of our combined physical and logical diagram of our database can be seen in Figure 1 below. Its structure is very alike to our Conceptual Model Diagram since it already was fairly normalized and compatible with a database structure. The first table that we implemented was the \textbf{person} which uses an automatically incremented integer ID \textbf{school\_id} as primary key. It is automatically incremented using the built-in SQL feature \textbf{GENERATED ALWAYS AS IDENTITY} which ensures that we can't insert values to it. The \textbf{school\_id} is widely used in the database since it is used to identify different persons. Their personal ID number is only used to identify their \textbf{Person} row with their real life identity. This ensures that we in special cases can update the personal ID number of a person if it were to change for some reason. The table have two checks using regex to ensure that the \textbf{personal\_id\_number} and \textbf{zip\_code} are correctly formatted.
+The result of our combined physical and logical diagram of our database can be seen in Figure 1 below. Its structure is very alike to our Conceptual Model Diagram since it already was fairly normalized and compatible with a database structure. The first table that we implemented was the \textbf{person} table which uses an automatically incremented integer ID \textbf{school\_id} as primary key. It is automatically incremented using the built-in SQL feature \textbf{GENERATED ALWAYS AS IDENTITY} which ensures that we can't insert values to it. The \textbf{school\_id} is widely used in the database since it is used to identify different persons. Their personal ID number is only used to identify their \textbf{Person} row with their real life identity. This ensures that we in special cases can update the personal ID number of a person if it were to change for some reason. The table have two checks using regex to ensure that the \textbf{personal\_id\_number} and \textbf{zip\_code} are correctly formatted.
 
 The \textbf{student} table has a relationship with \textbf{contact\_details} which store personal or relative contact details for each person. Each contact details have a unique ID that is also \textbf{GENERATED ALWAYS AS IDENTITY}. This is also the primary key of each contact details. Since we don't require both a phone number and an email address we have added a check that ensures they are not null at the same time.
 
 Next, we have the tables \textbf{instructor} and \textbf{student} which uses a foreign key to person which connects them. This allows us to divide each person into roles and also apply additional columns or relations to each role such as \textbf{can\_teach\_ensamble} or the table \textbf{sibling}. The \textbf{instructor} and \textbf{student} row will be automatically deleted if the \textbf{person} reference is deleted since it is defined as \textbf{ON DELETE CASCADE}.
 
-One of our main issues with the Conceptual Diagram Model was that we didn't think about that 3 students with 3 different parents may not be siblings with everyone. For example, student 1 may be sibling with student 2 which share the same mother and the same father. At the same time, student 3 may also be sibling with student 2 by sharing father. Sibling 1 and 2 may however have different fathers and mothers which don't make them siblings. This made it impossible for them all to share a single sibling ID that groups them together. To fix this, we implemented a new table called \textbf{sibling} that takes two foreign keys which both are \textbf{student\_school\_id}s which can link two students together as siblings. To ensure that you cannot insert bidirectional data we created a trigger which automatically ensures the first school ID is the smallest one and the second school ID is the largest one. These two IDs build the primary key which ensures only one sibling relation can be saved for two students. We also added a check to ensure that a student cannot be a sibling with themselves. If any of the students are removed from the database, the sibling relationship is automatically removed since both foreign keys are defined as \textbf{ON DELETE CASCADE}.
+One of our main issues with the Conceptual Diagram Model was that we didn't think about that 3 students with 3 different parents may not be siblings with everyone. For example, student 1 may be sibling with student 2 which share the same mother but with different fathers. At the same time, student 3 may also be sibling with student 2 by sharing father but not mother. This makes it possible for student 1 and 3 to have both different fathers and mothers which don't make them siblings. This made it impossible for them all to share a single sibling ID that groups them together. To fix this, we implemented a new table called \textbf{sibling} that takes two foreign keys which both are \textbf{student\_school\_id}s which can link two students together as siblings. To ensure that you cannot insert bidirectional data we created a trigger which automatically ensures the first school ID is the smallest one and the second school ID is the largest one. These two IDs build the primary key which ensures only one sibling relation can be saved for two students. We also added a check to ensure that a student cannot be a sibling with themselves. If any of the students are removed from the database, the sibling relationship is automatically removed since both foreign keys are defined as \textbf{ON DELETE CASCADE}.
 
 The \textbf{instructor} table has a relationship with \textbf{instrument\_skill} which defines what instrument skills each instructor has. The \textbf{instrument\_skill} table in turn has a foreign key to \textbf{instructor} which links them together. If the \textbf{instructor} row is deleted, so is the \textbf{instrument\_skill} row since the foreign key is defined as \textbf{ON DELETE CASCADE}. The \textbf{skill\_level} column also has a check which enforces that the value is between 1 and 3 indicating the different skill levels beginner, intermediate, and advanced. It also has a foreign key to \textbf{instrument\_type} which helps us keep a clear definition of what instrument it is. If the instrument type is removed the instrument skill is also removed since it also is defined as \textbf{ON DELETE CASCADE}.
 
-We also created a table called \textbf{instrument\_type} which store information about all instrument types that are available. All instrument types have their own ID that can be referenced from other tables using a foreign key. It can then be connected to the instrument type name which is presented to the user, etc.
+We also created a table called \textbf{instrument\_type} which store information about all instrument types that are available. All instrument types have their own ID that can be referenced from other tables using a foreign key. It can then be connected to the instrument type name which can be presented to the user, etc.
 
-Next, we have the \textbf{activity} table which store general information about all types of activities like individual lessons, group lessons and ensembles. This table also has a generated integer ID. It has a check to ensure that the start and end time of each activity is in the correct order. The \textbf{activity} table also has relationships with the \textbf{lesson\_individual}, \textbf{lesson\_group}, and \textbf{ensamble} tables. These tables help to group each activity into the different types. This is also a small change from our conceptual model diagram which used Lesson to define both an individual and group lesson but with different values to their min and max student attributes. To ensure that we don't have a table with a lot of NULL values for min and max students, we decided to split the tables up instead which removes this need. Both \textbf{lesson\_group} and \textbf{ensamble} share checks to ensure the min students are above 1 and that max students is larger that the min students. All 3 tables share \textbf{ON DELETE CASCADE} on \textbf{activity\_id} which ensures that their row is deleted if the activity row is deleted. The tables \textbf{lesson\_individual} and \textbf{lesson\_group} share the check to ensure that the skill level is between 1 and 3 in the same way as it's defined for the \textbf{instrument\_skill} table. The \textbf{activity} table has \textbf{ON DELETE RESTRICT} on all foreign keys to ensure that these are not removed before all their references are replaced or removed. The \textbf{activity} table also have a trigger that ensures a instructor isn't booked on overlapping times since the instructor can't be at two places at the same time. The \textbf{lesson\_individual} and \textbf{lesson\_group} keep a foreign key to \textbf{instrument\_type} to keep track of what instrument it is. If you try to remove the instrument type it will be stopped due to \textbf{ON DELETE RESTRICT}. Instead, you would need to replace the reference before trying to remove the instrument type.
+Next, we have the \textbf{activity} table which store general information about all types of activities like individual lessons, group lessons and ensembles. This table also has a generated integer ID based on the same principle described earlier. Furthermore it has a check to ensure that the start and end time of each activity is in the correct order. The \textbf{activity} table also has relationships with the \textbf{lesson\_individual}, \textbf{lesson\_group}, and \textbf{ensamble} tables. These tables help to group each activity into the different types. This is also a small change from our conceptual model diagram which used Lesson to define both an individual and group lesson but with different values to their min and max student attributes. To ensure that we don't have a table with a lot of NULL values for min and max students, we decided to split the tables up instead which removes this need. Both \textbf{lesson\_group} and \textbf{ensamble} share checks to ensure the min students are above 1 and that max students is larger than the min students. All 3 tables share \textbf{ON DELETE CASCADE} on \textbf{activity\_id} which ensures that their row is deleted if the activity row is deleted. The tables \textbf{lesson\_individual} and \textbf{lesson\_group} share a check to ensure that the skill level is between 1 and 3 in the same way as it's defined for the \textbf{instrument\_skill} table. The \textbf{activity} table has \textbf{ON DELETE RESTRICT} on all foreign keys to ensure that these are not removed before all their references are replaced or removed. This for example ensures an activity isn't removed just because a instructor resigns. The \textbf{activity} table also have a trigger that ensures a instructor isn't booked on overlapping times since the instructor can't be at two places at the same time. The \textbf{lesson\_individual} and \textbf{lesson\_group} keep a foreign key to \textbf{instrument\_type} to keep track of what instrument it is. If you try to remove the instrument type it will be stopped due to \textbf{ON DELETE RESTRICT}. Instead, you would need to replace the reference with another instrument type before trying to remove it.
 
-The \textbf{activity} table also has a relationship to the \textbf{location} table which is a table of all possible locations where you may host an activity. The \textbf{location} table has a check to ensure that not both \textbf{room\_name} or \textbf{video\_link} are NULL since a location may be either physical, online, or both.
+The \textbf{activity} table also has a relationship to the \textbf{location} table which is a table of all possible locations where you may host an activity. The \textbf{location} table has a check to ensure that not both \textbf{room\_name} or \textbf{video\_link} are NULL at the same time since a location should be either physical, online, or both.
 
-Next we have the \textbf{pricing} table which hold pricing information for each activity type based on its type and skill level. It also holds extra information such as sibling discount percentage, if its active and a unique ID. This fulfills the requirement to be able and update the price of a certain activity but still be able to see the old price after its updated. Each activity store the id to the pricing row that was active at that time. If you wish to update the pricing you simply set the current row's to active column to false and insert a new row matching the same activity and skill level. The \textbf{pricing} table also has a number of checks such as that \textbf{activity\_type} is between 1 and 3 which indicates individual lesson, group lesson, and ensemble. It has a check to ensure skill level is between 1 and 3, that the price isn't negative, and that the sibling discount is a number between 1-100 indicated by a discount percentage.
+Next we have the \textbf{pricing} table which hold pricing information for each activity type based on its type and skill level. It also holds extra information such as sibling discount percentage, if its active and a unique ID. This fulfills the requirement to be able and update the price of a certain activity but still be able to see the old price after its updated. Each activity store the id to the pricing row that was active at that time. If you wish to update the pricing you simply set the current row's active column to false and insert a new row matching the same activity and skill level. The \textbf{pricing} table also has a number of checks such as that \textbf{activity\_type} is between 1 and 3 which indicates individual lesson, group lesson, and ensemble. It has a check to ensure skill level is between 1 and 3, that the price isn't negative, and that the sibling discount is a number between 1-100 indicated by a discount percentage.
 
-The \textbf{booking} table has a relationship with both the \textbf{activity} and the \textbf{student} table and is used to store what activities each student is booked for. Both foreign keys are set to \textbf{ON DELETE CASCADE} which ensures that a booking is removed if its student or activity is removed.
+The \textbf{booking} table has a relationship with both the \textbf{activity} and the \textbf{student} table and is used to store what activities each student is booked for. Both foreign keys are set to \textbf{ON DELETE CASCADE} which ensures that a booking is removed if its student or activity is removed. They together make up the primary key which ensures that each student only can be booked for each activity once.
 
-Looking in the other direction of \textbf{person} we have the \textbf{rental} table which keeps track of all rentals made by each student. It has foreign keys to the \textbf{student} \textbf{school\_id} and \textbf{instrument\_inventory} \textbf{inventory\_id} which are defined as \textbf{ON DELETE CASCADE} since there is no meaning to keep track of a rental that cannot be linked to a \textbf{person} or \textbf{instrument\_inventory}. The table is linked to person to ensure that both students and instructors should be able to make rentals. To fulfill the requirement on that each student only should be able to have two active rentals we have added a trigger that checks this before a row is inserted or updated. Another check ensures that the rental time does not exceed 12 months.
+Looking in the other direction of \textbf{person} we have the \textbf{rental} table which keeps track of all rentals made by each student. It has foreign keys to the \textbf{person} table's \textbf{school\_id} and \textbf{instrument\_inventory} table's \textbf{inventory\_id} which are defined as \textbf{ON DELETE CASCADE} since there is no meaning to keep track of a rental that cannot be linked to a \textbf{person} or \textbf{instrument\_inventory}. The table is linked to a person to ensure that both students and instructors should be able to make rentals. To fulfill the requirement on that each person only should be able to have two active rentals we have added a trigger that checks this before a row is inserted or updated. Another check ensures that the rental time does not exceed 12 months.
 
-Finally, we have the \textbf{instrument\_inventory} table which store information about all instruments that the school has in inventory available for rental. All instruments of the same brand and model are stored in the same row and are instead kept track of using a \textbf{quantity} column that defines how many instruments there are. The table has two checks to ensure that the quantity and price is over 0. It also references \textbf{instrument\_type} using a foreign key with \textbf{ON DELETE RESTRICT}. This ensures that you cannot remove an instrument type that we keep track of in our instrument inventory.
+Finally, we have the \textbf{instrument\_inventory} table which store information about all instruments that the school has in inventory available for rental. All instruments of the same brand and model are stored in the same row and are instead kept track of using a \textbf{quantity} column that defines how many instruments there are of that brand and model combination. The table has two checks to ensure that the quantity and price is over 0. It also references \textbf{instrument\_type} using a foreign key with \textbf{ON DELETE RESTRICT}. This ensures that you cannot remove an instrument type that is assigned to something we want to continue keep track of in our instrument inventory. Instead, you need to replace the instrument type or delete the \textbf{instrument\_inventory} row if the physical instruments aren't in inventory anymore.
 
 \begin{figure}[H]
   \begin{center}
@@ -131,7 +131,7 @@ All tables are relevant to store the data needed to fulfill the requirements pos
 \subsection{Are there columns for all data that shall be stored? Are all relevant column constraints and foreign key constraints specified? Can all column types be motivated?}
 All columns are there to fulfill the requirements posed by the assignment. Their data type has been carefully selected to follow the same requirements or general standards for that type of data. All columns that need to be constrained has been done so with checks or triggers. Foreign key constraints are automatically rendered by Astah, modified if needed, and finally verified to be correct.
 
-\subsection{Can the choice of primary keys be motivated? Are primary keys unique?} All primary keys or composite primary keys have been carefully selected to ensure that they will be unique. Eventual composite primary keys that would not be unique reflects data that is not wanted. For the sibling table we avoid bidirectional composite primary keys using a trigger that ensure each combination of student IDs only can occur once, regardless of their order.
+\subsection{Can the choice of primary keys be motivated? Are primary keys unique?} All primary keys or composite primary keys have been carefully selected to ensure that they will be unique. In instances where it isn't possible to insert a row due to a non-unique primary key, that data isn't wanted, and it is a conscious limitation. For the sibling table we avoid bidirectional composite primary keys using a trigger that ensure each combination of student IDs only can occur once, regardless of their order.
 
 
 \subsection{Are all relations relevant? Is some relation missing? Is the cardinality correct?}
@@ -148,17 +148,17 @@ Notes have been used in the diagram to explain triggers, checks, ON DELETE actio
 There are no derived attributes in the database as this would lead to redundant information being stored. There can be advantages of using derived attributes when a certain column is read a lot. But this time it was optimized for size.
 
 \subsection{Are tables (or ENUMs) always used instead of free text for constants such as the skill levels (beginner, intermediate and advanced)?}
-Initially we used ENUMs for the instrument types but was recommended by a lab assistant to use INT IDs or a lookup table since ENUMs were said to not scale very efficiently. Therefore, IDs like 1 for beginner, 2 for intermediate and 3 for advanced are used for skill level. For instrument types we used the table \textbf{instrument\_type} which defines an ID and name for all instrument types. Other tables like \textbf{instrument\_skill}, \textbf{instrument\_inventory}, \textbf{lesson\_individual}, and \textbf{lesson\_group} can then reference these instrument types using a foreign key.
+Initially we used ENUMs for the instrument types but was recommended by a lab assistant to use INT IDs or a lookup table since ENUMs were said to not scale very efficiently. Therefore, IDs like 1 for beginner, 2 for intermediate and 3 for advanced are also used for skill level. For instrument types we used the table \textbf{instrument\_type} which defines an ID and name for all instrument types. Other tables like \textbf{instrument\_skill}, \textbf{instrument\_inventory}, \textbf{lesson\_individual}, and \textbf{lesson\_group} can then reference these instrument types using a foreign key.
 
 \subsection{Is the method and result explained in the report? Is there a discussion? Is the discussion relevant?}
 
 The method is explained the report thoroughly and systematically and explains what steps were needed to be taken to create the model. The result section describes what was implemented in the database. The report also contains a relevant discussion.  
 
 \subsection{Pros/cons of storing all data in the database compared to application}
-We have decided to include all data required by Soundgood in the database. This means that rentals are enforced to two active rentals, double bookings are avoided, music instrument types are stored in the database, strict checks are done for all data, etc. One of the main advantages of doing this is that logical errors are a lot less likely to happen. For example, the price for a lesson or rental cannot be negative which efficiently would give the person money instead of charging them. The negative aspect is however that the database has to process more information which causes additional strain on the database. The same functionality can and should be implemented in the application as well but implementing it in both ensures that all data is what we expect it to be. Basically, we are a lot less likely to encounter database faults later when its in use.
+We have decided to include all data required by Soundgood in the database. This means that rentals are enforced to two active rentals, double bookings are avoided, music instrument types are stored in the database, strict checks are done for all data, etc. One of the main advantages of doing this is that logical errors are a lot less likely to happen. For example, the price for a lesson or rental cannot be negative which efficiently would give the person money instead of charging them. The negative aspect is however that the database has to perform more processing which causes additional strain on the database. The same functionality can and should be implemented in the application as well but implementing it in both systems ensures that all data is what we expect it to be and errors are more likely to be caught early before they can cause a bigger problem.
 
 \subsection{Pros/cons of storing multiple versions of data in the database}
-The main disadvantage of storing multiple versions of data in the database is of course that more storage is used. However, it can be very useful for looking into historical data like requested by the assignment. For example when you want to look at price history or want to change the price of something without affecting those who have already made a booking at another price. More data can also slow down the database if excessive. If you need to keep a lot of historical data it might be wise to remove old data when it isn't needed. Alternatively you can separate your production database with a history database if the historical data isn't needed as often. This causes less strain on the production database.
+The main disadvantage of storing multiple versions of data in the database is of course that more storage is used. However, it can be very useful for looking into historical data like requested by the assignment. For example when you want to look at price history or want to change the price of something without affecting those who have already made a booking at another price. More data can also slow down the database if excessive. If you need to keep a lot of historical data it might be wise to remove old data when it isn't needed. Alternatively you can separate your production database with a history database since this causes less strain on the production database.
 
 \section{Comments About the Course}
 
